edited home ,about us,volunteer page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,7 +559,7 @@ form .alert {
   display: block;
   margin: 5px auto;
   background: #1f76bd;
-  height: 1px;
+  /* height: px; */
   width: 280px;
 }
 .title-under:after {
