--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,24 @@ body {
   color: #115c9b;
 }
 
+.item{
+  margin-top: 60px;
+}
+
+.navbar-main{
+  padding: 10px;
+}
+
+.navbar-img{
+  width: 220px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .navbar-img {
+    width: 140px;
+  }
+}
+
 @media only screen and (max-width: 100px) {
   .navbar-brand1 {
     height: 100%;
@@ -68,7 +86,7 @@ a:hover, a:focus, a:active {
   border: 1px solid transparent;
   border-radius: 0.25rem;
   height: 15rem;
-  
+
 }
 
 .alert:hover {
