--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,17 @@ body {
   font-family: "Open sans", sans-serif;
   color: #115c9b;
 }
+.FAB{
+  background-color: black;
+color: white;
+right: 50px;
+bottom: 30px;
+z-index: 1000;
+position: fixed;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
+}
+
+
 
 .item{
   margin-top: 60px;
