--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
 @media only screen and (max-width: 700px) {
   .volunteer-image {
     width: 100%;
+    display:none;
   }
 }
 
