modified carousal,contact us,footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
 
 .item{
   margin-top: 60px;
-  height: "600";
+  height: 570px;
 }
 
 .navbar-main{
