--- a/assets/css/events-card.css
+++ b/assets/css/events-card.css
@@ -32,7 +32,7 @@
 .front,
 .back{
   background-size: cover;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.25);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
   border-radius: 10px;
   background-position: center;
   -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
@@ -52,9 +52,9 @@
 
 .back{
   background: #cedce7;
-  background: -webkit-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
-  background: -o-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
-  background: linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
+  background: -webkit-linear-gradient(45deg,  #ffe680 0%,#1f76bd 100%);
+  background: -o-linear-gradient(45deg,  #ffe680 0%,#1f76bd 100%);
+  background: linear-gradient(45deg,  #ffe680 0%,#1f76bd 100%);
 }
 
 .front:after{
