--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,10 @@ z-index: 1000;
 position: fixed;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
 }
-
+a.FAB:hover{
+  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
+}
 
 
 .item{
