--- a/charity/trust/templates/contact.html
+++ b/charity/trust/templates/contact.html
@@ -98,10 +98,10 @@
 	</div>
 
 	<div id="contact-map" class="contact-map">
+    <iframe style="width: 100%;height: 100%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31500.490996002696!2d76.50200255817387!3d9.283425177746077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b061f5acccf914d%3A0x67dbb055ca3d58c4!2sChennithala%2C%20Kerala!5e0!3m2!1sen!2sin!4v1604052301708!5m2!1sen!2sin" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 	</div>
 
   <!-- Google map  -->
-  <script src="http://maps.google.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
 
 {% endblock %}
