--- a/charity/trust/templates/base.html
+++ b/charity/trust/templates/base.html
@@ -145,13 +145,13 @@
                                         <li><a href="{% url 'about' %}"><span class="fa fa-chevron-right mr-2"></span> ABOUT</a></li>
                                         <li class="has-child"><a href="#"><span class="fa fa-chevron-right mr-2"></span> MEDIA</a>
                                           <ul class="submenu">
-                                            <li class="submenu-item"><a href="events.html"> EVENTS</a></li>
-                                            <li class="submenu-item"><a href="fundraising.html"> FUND RAISING</a></li>
+                                            <li class="submenu-item"><a href="{% url 'events' %}"> EVENTS</a></li>
+                                            <li class="submenu-item"><a href="{% url 'fundraising' %}"> FUND RAISING</a></li>
                                           </ul>
                                         </li>
-                                        <li><a href="project.html"><span class="fa fa-chevron-right mr-2"></span> PROJECTS</a></li>
-                                        <li><a href="volunteer.html"><span class="fa fa-chevron-right mr-2"></span> VOLUNTEER</a></li>
-                                        <li><a href="contact.html"><span class="fa fa-chevron-right mr-2"></span> CONTACT US</a></li>
+                                        <li><a href="{% url 'project' %}"><span class="fa fa-chevron-right mr-2"></span> PROJECTS</a></li>
+                                        <li><a href="{% url 'volunteer' %}"><span class="fa fa-chevron-right mr-2"></span> VOLUNTEER</a></li>
+                                        <li><a href="{% url 'contact' %}"><span class="fa fa-chevron-right mr-2"></span> CONTACT US</a></li>
                                   </ul>
                               </div>
 
@@ -167,9 +167,15 @@
 
                               <div class="footer-content">
                                 <ul class="footer-ul">
-                	                <li class="footer-li"><span class="contact-icon footer-icon"> <i class="fa fa-map-marker"></i></span> Kochupurayil, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span></li>
-                	                <li class="footer-li"><a href="#"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>8848750988,   8921799665</span></a></li>
-                	                <li class="footer-li"><a href="#"><span class="icon footer-icon"><i class="fa fa-paper-plane pr-4"></i></span> thetravancorecharitabletrust@gmail.com</span></a></li>
+                	                <li class="footer-li"><a href="https://www.google.co.in/maps/search/Chennithala,+PO+Mavelikkara,+Allappey/@9.2616822,76.4986127,13z/data=!3m1!4b1">
+                                    <span class="contact-icon footer-icon"> <i class="fa fa-map-marker"></i>
+                                  </span>Kochupurayil, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span>
+                                </a>
+                                </li>
+                	                <li class="footer-li"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>
+                                    <span><a href="tel:+918848750988">8848750988,&ensp;&ensp;</a><a href="tel:+918921799665">8921799665</span></a></li>
+                	                <li class="footer-li"><a href="mailto:thetravancorecharitabletrust@gmail.com"><span class="icon footer-icon">
+                                    <i class="fa fa-paper-plane pr-4"></i></span> thetravancorecharitabletrust@gmail.com</span></a></li>
                 	              </ul>
                               </div>
 
