Donate page links given to donate buttons

--- a/charity/trust/templates/volunteer.html
+++ b/charity/trust/templates/volunteer.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block body_block %}
-    <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+    <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
 
     <div id="homeCarousel" class="carousel slide carousel-home" data-ride="carousel">
 
@@ -24,7 +24,7 @@
 
                   <h2 class="carousel-title bounceInDown animated slow">Because they need your help</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow ">Do not let them down</h4>
-                  <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
 
@@ -43,7 +43,7 @@
 
                   <h2 class="carousel-title bounceInDown animated slow">Together we can improve their lives</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow"> So let's do it !</h4>
-                  <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
 
@@ -64,7 +64,7 @@
 
                   <h2 class="carousel-title bounceInDown animated slow" >A penny is a lot of money, if you have not got a penny.</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow">You can make the diffrence !</h4>
-                  <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
 
