--- a/charity/trust/templates/about.html
+++ b/charity/trust/templates/about.html
@@ -199,7 +199,7 @@
 
 		</div> <!-- /.about-us -->
 
-    <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+    <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
 
 	    <div class="our-team animate-onscroll fadeIn">
 
