--- a/charity/trust/templates/events.html
+++ b/charity/trust/templates/events.html
@@ -7,7 +7,7 @@
 
 
 
-        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+        <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
 
 	<div class="page-heading text-center">
 
