--- a/charity/trust/templates/index.html
+++ b/charity/trust/templates/index.html
@@ -24,7 +24,7 @@
 
                   <h2 class="carousel-title bounceInDown animated slow">Because they need your help</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow ">Do not let them down</h4>
-                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
 
@@ -43,7 +43,7 @@
 
                   <h2 class="carousel-title bounceInDown animated slow">Together we can improve their lives</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow"> So let's do it !</h4>
-                  <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
 
@@ -64,7 +64,7 @@
 
                   <h2 class="carousel-title bounceInDown animated slow" >A penny is a lot of money, if you have not got a penny.</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow">You can make the diffrence !</h4>
-                  <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
+                  <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
 
@@ -86,7 +86,7 @@
 
     </div><!-- /.carousel -->
 
-    <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+    <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
 
 
     <div class="section-home about-us fadeIn animated">
