--- a/charity/trust/templates/project.html
+++ b/charity/trust/templates/project.html
@@ -3,7 +3,7 @@
 {% block body_block %}
 
 
-        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+        <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
 
 	<div class="page-heading text-center">
 
