--- a/charity/trust/templates/index.html
+++ b/charity/trust/templates/index.html
@@ -16,7 +16,7 @@
 
             <div class="item active">
 
-              <img style="height: 620px;" src="https://images.unsplash.com/photo-1537531653369-236e00309977?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
+              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1537531653369-236e00309977?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
 
               <div class="container">
 
@@ -35,7 +35,7 @@
 
             <div class="item ">
 
-            <img style="height: 620px;" src="https://images.unsplash.com/photo-1518131296958-df44106fd0ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
+            <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1518131296958-df44106fd0ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
 
               <div class="container">
 
@@ -56,7 +56,7 @@
 
             <div class="item ">
 
-            <img style="height: 620px" src="https://images.unsplash.com/photo-1530490125459-847a6d437825?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=763&q=80" alt="">
+            <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1530490125459-847a6d437825?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=763&q=80" alt="">
 
               <div class="container">
 
