--- a/charity/trust/templates/volunteer.html
+++ b/charity/trust/templates/volunteer.html
@@ -16,7 +16,7 @@
 
             <div class="item active">
 
-              <img style="height: 620px;" src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
               <div class="container">
 
@@ -35,7 +35,7 @@
 
             <div class="item ">
 
-              <img style="height: 620px;" src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
               <div class="container">
 
@@ -56,7 +56,7 @@
 
             <div class="item ">
 
-              <img style="height: 620px" src="https://images.unsplash.com/photo-1558261827-d0de98a628e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+              <img style="height: 620px; object-fit: cover;" src="https://images.unsplash.com/photo-1558261827-d0de98a628e8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 
               <div class="container">
 
