--- a/charity/trust/static/assets/css/style.css
+++ b/charity/trust/static/assets/css/style.css
@@ -25,6 +25,16 @@ position: fixed;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
 }
 
+  @media only screen and (min-width: 994px) {
+    .members-row {
+      margin-left: 20%;
+    }
+  }
+
+  .about-icon{
+    background-color: lavender;
+  }
+
 .footer-ul{
   list-style-type: none;
   padding-left: 0;
