--- a/charity/trust/templates/about.html
+++ b/charity/trust/templates/about.html
@@ -205,43 +205,9 @@
 
 	        <div class="container">
 
-	            <h2 class="title-style-1">Our Team <span class="title-under"></span></h2>
+	            <h2 class="title-style-1">Board Members<span class="title-under"></span></h2>
 
-	            <div class="row">
-
-	                <div class="col-md-3 col-sm-6">
-
-	                    <div class="team-member">
-
-	                        <div class="thumnail">
-
-	                            <img src="{% static 'assets/images/team/member-1.jpg' %}" alt="" class="cause-img">
-
-	                        </div>
-
-
-
-	                        <h4 class="member-name"><a href="#">Robert C. Numbers</a></h4>
-
-	                        <div class="member-position">
-	                            CO-FOUNDER
-	                        </div>
-
-	                        <div class="btn-holder">
-
-	                          <a href="#" class="btn"> <i class="fa fa-envelope"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-google"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-linkedin"></i> </a>
-
-	                        </div>
-
-
-
-	                    </div> <!-- /.team-member -->
-
-	                </div>
+	            <div class="row members-row">
 
 	                <div class="col-md-3 col-sm-6">
 
@@ -249,25 +215,23 @@
 
 	                        <div class="thumnail">
 
-	                            <img src="{% static 'assets/images/team/member-3.jpg' %}" alt="" class="cause-img">
+	                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
 
 	                        </div>
 
 
 
-	                        <h4 class="member-name"><a href="#">Marjorie R. Echevarria</a></h4>
+	                        <h4 class="member-name">Sajan George</h4>
 
 	                        <div class="member-position">
 	                            CO-FOUNDER
 	                        </div>
 
 	                        <div class="btn-holder">
-
-	                          <a href="#" class="btn"> <i class="fa fa-envelope"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-google"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-linkedin"></i> </a>
+	                          <a href="mailto:gsajan52@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+	                          <a href=#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
+	                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
+	                          <a href="tel:+918086738848" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
 
 	                        </div>
 
@@ -284,13 +248,13 @@
 
 	                        <div class="thumnail">
 
-	                            <img src="{% static 'assets/images/team/member-4.jpg' %}" alt="" class="cause-img">
+	                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
 
 	                        </div>
 
 
 
-	                        <h4 class="member-name"><a href="#">Allison J. Falls</a></h4>
+	                        <h4 class="member-name">Harikrishnan Vijayan</h4>
 
 	                        <div class="member-position">
 	                            CO-FOUNDER
@@ -298,11 +262,10 @@
 
 	                        <div class="btn-holder">
 
-	                          <a href="#" class="btn"> <i class="fa fa-envelope"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-google"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-linkedin"></i> </a>
+	                          <a href="mailto:hari.vijayan89@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+	                          <a href="#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
+	                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
+	                          <a href="tel:+918921799665" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
 
 	                        </div>
 
@@ -328,17 +291,16 @@
 
 
 	                        <div class="member-position">
-                                <h4 class="member-name"><a href="#">Bryan B. Stevens</a></h4>
+                                <h4 class="member-name">Lijo Thomas</h4>
 	                            CO-FOUNDER
 	                        </div>
 
 	                        <div class="btn-holder">
 
-	                          <a href="#" class="btn"> <i class="fa fa-envelope"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-google"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="#" class="btn"> <i class="fa fa-linkedin"></i> </a>
+	                          <a href="mailto:thomaslijo634@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+	                          <a href="#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
+	                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
+	                          <a href="tel:+919744492745" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
 
 	                        </div>
 
