--- a/charity/trust/templates/donate.html
+++ b/charity/trust/templates/donate.html
@@ -2,12 +2,6 @@
 {% load static %}
 {% block body_block %}
 
-
-<!-- PrettyPhoto -->
-<link rel="stylesheet" href="{% static 'assets/css/prettyPhoto.css' %}">
-
-<link rel="stylesheet" href="{% static 'assets/css/funds.css' %}">
-
         <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
 
     <div id="homeCarousel" class="carousel slide carousel-home" data-ride="carousel">
@@ -98,106 +92,6 @@
 
   		<div class="container">
 
-  			<div class="row">
-                <section>
-
-  				<div class="col-md-7 col-sm-12 col-form">
-
-  					<h2 class="title-style-2">DONATE FORM <span class="title-under"></span></h2>
-
-  					<form action="php/mail.php" class="contact-form ajax-form">
-
-  						<div class="row">
-
-          							<div class="form-group col-md-6">
-                              <label for="dfname">FIRST NAME*</label>
-          	                        <input type="text" name="dfname" class="form-control" placeholder="Name" required>
-          	            </div>
-
-                        <div class="form-group col-md-6">
-                              <label for="dlname">LAST NAME*</label>
-          	                        <input type="text" name="dlname" class="form-control" placeholder="Name" required>
-          	            </div>
-
-                        <div class="form-group col-md-6">
-                          <label for="dgender">Gender*</label>
-                          <div class="col-sm-10">
-                            <label for="male" class="radio-inline"><input type="radio" name="dgender" value="male" required  id="male"> MALE </label>
-                            <label for="female" class="radio-inline"><input type="radio" name="dgender" value="female" required  id="female"> FEMALE </label>
-                            <label for="other" class="radio-inline"><input type="radio" name="dgender" value="others" required  id="other"> OTHER </label>
-                          </div>
-                        </div>
-
-          	              <div class="form-group col-md-6">
-                           <label for="email">E-mail*</label>
-          	                   <input type="email" name="demail" class="form-control" placeholder="E-mail" required>
-          	               </div>
-
-                            <div class="form-group col-md-6">
-                              <label for="dcontact">Contact*</label>
-                              	<input type="tel" name="dcontact" class="form-control" placeholder="Contact no" required>
-                             </div>
-
-
-                             <div class="form-group col-md-6">
-                                   <label for="doccupation">Occupation*</label>
-                                         <input type="text" name="doccupation" class="form-control" placeholder="occupation" required>
-                             </div>
-
-
-                             <div class="form-group col-md-6">
-                                   <label for="dcity">City*</label>
-                                         <input type="text" name="dcity" class="form-control" placeholder="City" required>
-                             </div>
-
-                             <div class="form-group col-md-6">
-                                   <label for="dpincode">Zipcode*</label>
-                                         <input type="zipcode" name="dpincode" class="form-control" pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Zipcode" required>
-                             </div>
-
-                             <div class="form-group col-md-6">
-                               <label for="dtype">Type Of Donation*</label>
-
-                                 <select class="form-control" name="dtype" placeholder="Type" required>
-                                   <option value="Money">Money</option>
-                                   <option value="Livelihood">Livelihood</option>
-                                   <option value="Education">Education</option>
-                                   <option value="Snacks">Health</option>
-                                 </select>
-
-                             </div>
-
-                           <!-- <div activeclass="form-group col-md-6">
-                             <label for="damount">Amount*</label>
-                               <input type="number" name="damount" min="1" step="any" class="form-control" placeholder="Enter the amount" required>
-                            </div> -->
-
-                            </div>
-                          <div class="form-group alerts">
-
-                          	<div class="alert alert-success" role="alert">
-
-  							</div>
-
-  							<div class="alert alert-danger" role="alert">
-
-  							</div>
-
-                          </div>
-
-                           <div class="form-group">
-                              <button type="submit" class="btn btn-primary pull-right">Donate</button>
-                          </div>
-
-                          <div class="clearfix"></div>
-
-  					</form>
-                </section>
-                <section>
-                    <img class="donate-image" src="{% static 'assets/images/united-nations-covid-19-response-QVNyCllG2GQ-unsplash.jpg' %}" alt="">
-                </section>
-  				</div>
-
 
           <div class="row ">
 
@@ -217,13 +111,146 @@
                 <!-- Tab panes -->
                 <div class="tab-content">
                   <div role="tabpanel" class="tab-pane active" id="regular">
-                    Form 1
-                  </div>
-                </div>
+                    <section>
 
-                <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane active" id="anonymous">
-                    Form 2
+              <div class="col-md-7 col-sm-12 col-form">
+
+
+
+                <form action="php/mail.php" class="contact-form ajax-form">
+
+                  <div class="row">
+
+                            <div class="form-group col-md-6">
+                                  <label for="dfname">FIRST NAME*</label>
+                                        <input type="text" name="dfname" class="form-control" placeholder="Name" required>
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                  <label for="dlname">LAST NAME*</label>
+                                        <input type="text" name="dlname" class="form-control" placeholder="Name" required>
+                            </div>
+
+                            <div class="form-group col-md-6">
+                              <label for="dgender">Gender*</label>
+                              <div class="col-sm-10">
+                                <label for="male" class="radio-inline"><input type="radio" name="dgender" value="male" required  id="male"> MALE </label>
+                                <label for="female" class="radio-inline"><input type="radio" name="dgender" value="female" required  id="female"> FEMALE </label>
+                                <label for="other" class="radio-inline"><input type="radio" name="dgender" value="others" required  id="other"> OTHER </label>
+                              </div>
+                            </div>
+
+                              <div class="form-group col-md-6">
+                               <label for="email">E-mail*</label>
+                                   <input type="email" name="demail" class="form-control" placeholder="E-mail" required>
+                               </div>
+
+                                <div class="form-group col-md-6">
+                                  <label for="dcontact">Contact*</label>
+                                    <input type="tel" name="dcontact" class="form-control" placeholder="Contact no" required>
+                                 </div>
+
+
+                                 <div class="form-group col-md-6">
+                                       <label for="doccupation">Occupation*</label>
+                                             <input type="text" name="doccupation" class="form-control" placeholder="occupation" required>
+                                 </div>
+
+
+                                 <div class="form-group col-md-6">
+                                       <label for="dcity">City*</label>
+                                             <input type="text" name="dcity" class="form-control" placeholder="City" required>
+                                 </div>
+
+                                 <div class="form-group col-md-6">
+                                       <label for="dpincode">Zipcode*</label>
+                                             <input type="zipcode" name="dpincode" class="form-control" pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Zipcode" required>
+                                 </div>
+
+                                 <div class="form-group col-md-6">
+                                   <label for="dtype">Type Of Donation*</label>
+
+                                     <select class="form-control" name="dtype" placeholder="Type" required>
+                                       <option value="Money">Money</option>
+                                       <option value="Livelihood">Livelihood</option>
+                                       <option value="Education">Education</option>
+                                       <option value="Snacks">Health</option>
+                                     </select>
+
+                                 </div>
+
+                               <!-- <div activeclass="form-group col-md-6">
+                                 <label for="damount">Amount*</label>
+                                   <input type="number" name="damount" min="1" step="any" class="form-control" placeholder="Enter the amount" required>
+                                </div> -->
+
+                                </div>
+                              <div class="form-group alerts">
+
+                                <div class="alert alert-success" role="alert">
+
+                    </div>
+
+                    <div class="alert alert-danger" role="alert">
+
+                    </div>
+
+                              </div>
+
+                               <div class="form-group">
+                                  <button type="submit" class="btn btn-primary pull-right">Donate</button>
+                              </div>
+
+                              <div class="clearfix"></div>
+
+                </form>
+                    </section>
+                  </div>
+
+                  <div role="tabpanel" class="tab-pane" id="anonymous">
+                    <section>
+                      <form action="php/mail.php" class="contact-form ajax-form">
+
+                        <div class="row">
+
+                                       <div class="form-group col-md-6">
+                                         <label for="dtype">Type Of Donation*</label>
+
+                                           <select class="form-control" name="dtype" placeholder="Type" required>
+                                             <option value="Money">Money</option>
+                                             <option value="Livelihood">Livelihood</option>
+                                             <option value="Education">Education</option>
+                                             <option value="Snacks">Health</option>
+                                           </select>
+
+                                       </div>
+
+                                     <!-- <div activeclass="form-group col-md-6">
+                                       <label for="damount">Amount*</label>
+                                         <input type="number" name="damount" min="1" step="any" class="form-control" placeholder="Enter the amount" required>
+                                      </div> -->
+
+                                      </div>
+                                    <div class="form-group alerts">
+
+                                      <div class="alert alert-success" role="alert">
+
+                          </div>
+
+                          <div class="alert alert-danger" role="alert">
+
+                          </div>
+
+                                    </div>
+
+                                     <div class="form-group">
+                                        <button type="submit" class="btn btn-primary">Donate</button>
+                                    </div>
+
+                                    <div class="clearfix"></div>
+
+                      </form>
+                    </section>
                   </div>
                 </div>
 
@@ -236,7 +263,6 @@
 
         </div>
       </div>
-      <script src="{% static 'assets/js/jquery.prettyPhoto.js' %}"></script>
 
 
 {% endblock %}
