--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -95,12 +95,7 @@
 
                     <li><a href="{% url 'index' %}">HOME</a></li>
                     <li><a href="{% url 'about' %}">ABOUT</a></li>
-                    <li class="has-child"><a href="#">MEDIA</a>
-                      <ul class="submenu">
-                        <li class="submenu-item"><a href="{% url 'events' %}">EVENTS</a></li>
-                        <li class="submenu-item"><a href="{% url 'fundraising' %}">FUND RAISING</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="{% url 'events' %}">EVENTS</a></li>
                     <li><a href="{% url 'project' %}">PROJECTS</a></li>
                     <li><a href="{% url 'volunteer' %}">VOLUNTEER</a></li>
                     <li><a href="{% url 'contact' %}">CONTACT US</a></li>
