--- a/trust/templates/donate.html
+++ b/trust/templates/donate.html
@@ -2,8 +2,6 @@
 {% load static %}
 {% block body_block %}
 
-        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
-
     <div id="homeCarousel" class="carousel slide carousel-home" data-ride="carousel">
 
           <!-- Indicators -->
@@ -170,7 +168,8 @@
                                  <div class="form-group col-md-6">
                                    <label for="dtype">Type Of Donation*</label>
 
-                                     <select class="form-control" name="dtype" placeholder="Type" required>
+                                     <select onchange="onSelectType()" id="type1" class="form-control" name="dtype" placeholder="Type" required>
+                                       <option value="null">-------Select an option-------</option>
                                        <option value="Money">Money</option>
                                        <option value="Livelihood">Livelihood</option>
                                        <option value="Education">Education</option>
@@ -179,10 +178,11 @@
 
                                  </div>
 
-                               <!-- <div activeclass="form-group col-md-6">
-                                 <label for="damount">Amount*</label>
-                                   <input type="number" name="damount" min="1" step="any" class="form-control" placeholder="Enter the amount" required>
-                                </div> -->
+                                 <div id="money" class="form-group col-md-6">
+                                       <label for="dpincode">Amount*</label>
+                                             <input type="zipcode" name="dpincode" class="form-control"
+                                             pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Amount" required>
+                                 </div>
 
                                 </div>
                               <div class="form-group alerts">
@@ -212,11 +212,15 @@
                       <form action="php/mail.php" class="contact-form ajax-form">
 
                         <div class="row">
-
+                                  <div class="form-group col-md-6">
+                                        <label for="dpincode">Zipcode*</label>
+                                              <input type="zipcode" name="dpincode" class="form-control" pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Zipcode" required>
+                                  </div>
                                        <div class="form-group col-md-6">
                                          <label for="dtype">Type Of Donation*</label>
 
-                                           <select class="form-control" name="dtype" placeholder="Type" required>
+                                           <select id="type2" onchange="onSelectType2()" class="form-control" name="dtype" placeholder="Type" required>
+                                             <option value="null">--------Select an option-------</option>
                                              <option value="Money">Money</option>
                                              <option value="Livelihood">Livelihood</option>
                                              <option value="Education">Education</option>
@@ -229,6 +233,15 @@
                                        <label for="damount">Amount*</label>
                                          <input type="number" name="damount" min="1" step="any" class="form-control" placeholder="Enter the amount" required>
                                       </div> -->
+
+                                      </div>
+                                      <div class="row">
+
+                                        <div id="money2" class="form-group col-md-6">
+                                              <label for="dpincode">Amount*</label>
+                                                    <input type="zipcode" name="dpincode" class="form-control"
+                                                    pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Amount" required>
+                                        </div>
 
                                       </div>
                                     <div class="form-group alerts">
@@ -263,6 +276,6 @@
 
         </div>
       </div>
-
+      <script src="{% static 'assets/js/donate.js' %}"></script>
 
 {% endblock %}
