--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -22,7 +22,7 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow">Because they need your help!</h2>
+                  <h2 class="carousel-title bounceInDown animated slow">Because they need your help</h2>
                   <h4 class="carousel-subtitle bounceInUp animated slow ">Do not let them down</h4>
                   <a href="{% url 'donate' %}" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal">DONATE NOW</a>
 
