--- a/trust/static/assets/css/style.css
+++ b/trust/static/assets/css/style.css
@@ -10,6 +10,17 @@
   Base
 ========================================================================== */
 
+.font1{
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.font2{
+  font-family: 'Poppins', sans-serif;
+}
+
+.font3{
+      font-family: 'Noto Sans', sans-serif;
+}
 
 body {
   font-family: "Open sans", sans-serif;
