--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -9,6 +9,7 @@
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Dosis:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Poppins:wght@200&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
         <!-- Bootsrap -->
         <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
