--- a/trust/templates/project.html
+++ b/trust/templates/project.html
@@ -9,7 +9,7 @@
 
 		<div class="container zoomIn animated">
 
-			<h1 class="page-title">OUR EVENTS <span class="title-under"></span></h1>
+			<h1 class="page-title">OUR PROJECTS <span class="title-under"></span></h1>
 			<p class="page-description">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
 			</p>
