--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -6,9 +6,18 @@
         <title>The Travancore Charitable Trust</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- For image while sharing link on social media -->
+        <meta property="og:title" content="The Travancore Charitable Trust">
+        <meta property="og:description" content="We aim to identify, allocate, empower and impart to every children and adult valuable.">
+        <meta property="og:url" content="https://travancore.herokuapp.com/">
+        <meta property="og:image" content="{% static 'assets/images/logo.png' %}">
+
+        <link rel="shortcut icon" href="{% static 'assets/images/circle-cropped.png' %}" type="image/x-icon" />
+
         <!-- Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Dosis:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Dosis:400,700' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Poppins:wght@200&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
         <!-- Bootsrap -->
