Added golden to some places

--- a/trust/static/assets/css/events-card.css
+++ b/trust/static/assets/css/events-card.css
@@ -143,7 +143,7 @@
   width: 4rem;
   height: 2px;
   position: absolute;
-  background: #C6D4DF;
+  background: #e8a443;
   display: block;
   left: 0;
   right: 0;
