--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -27,9 +27,9 @@
 
 				</div>
 
-				<div class="font1" class="col-md-6">
+				<div class="col-md-6">
 
-					<h2 class="title-style-2">ABOUT TRAVANCORE-TRUST <span class="title-under"></span></h2>
+					<h2 class="title-style-2">ABOUT THE TRAVANCORE TRUST <span class="title-under"></span></h2>
 
 					<p>We aim to identify, allocate, empower and impart to every children and adult valuable. To set up a comprehensive centre for mental health and substance abuse, integrating psychiatry, clinical psychology and counseling.</p>
 
@@ -42,7 +42,7 @@
       <!-- inserting cards again -->
 
       <div id="content1" class="row fadeIn animated even-about-card">
-        <div class="font2" class="col-md-6">
+        <div class="col-md-6">
 
           <h2 class="title-style-2"> OUR AIM <span class="title-under"></span></h2>
           <ul type="circle">
@@ -91,7 +91,7 @@
 
   				</div>
 
-  				<div class="font3" class="col-md-6">
+  				<div class="col-md-6">
 
   					<h2 class="title-style-2">OUR MISSION <span class="title-under"></span></h2>
             <ul type="circle">
@@ -116,7 +116,7 @@
 			                  <div class="about-us-col">
 
 			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/our-mission-icon.png' %}" alt="">
+			                          <img src="{% static 'assets/images/icons/our-mission-icon1.png' %}" alt="">
 			                        </div>
 			                        <h3 class="col-title">our mission</h3>
 			                        <div class="col-details">
@@ -136,7 +136,7 @@
 			                  <div class="about-us-col">
 
 			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/make-donation-icon.png' %}" alt="">
+			                          <img src="{% static 'assets/images/icons/make-donation-icon1.png' %}" alt="">
 			                        </div>
 			                        <h3 class="col-title">OUR AIM</h3>
 			                        <div class="col-details">
@@ -156,7 +156,7 @@
 			                  <div class="about-us-col">
 
 			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/help-icon.png' %}" alt="">
+			                          <img src="{% static 'assets/images/icons/help-icon1.png' %}" alt="">
 			                        </div>
 			                        <h3 class="col-title">Our Events</h3>
 			                        <div class="col-details">
@@ -176,7 +176,7 @@
 			                  <div class="about-us-col">
 
 			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/programs-icon.png' %}" alt="">
+			                          <img src="{% static 'assets/images/icons/programs-icon1.png' %}" alt="">
 			                        </div>
 			                        <h3 class="col-title">our projects</h3>
 			                        <div class="col-details">
