--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="The Travancore Charitable Trust">
         <meta property="og:description" content="We aim to identify, allocate, empower and impart to every children and adult valuable.">
         <meta property="og:url" content="https://travancore.herokuapp.com/">
-        <meta property="og:image" content="{% static 'assets/images/logo.png' %}">
+        <meta property="og:image" content="{% static 'assets/images/circle-cropped.png' %}">
 
         <link rel="shortcut icon" href="{% static 'assets/images/circle-cropped.png' %}" type="image/x-icon" />
 
@@ -95,7 +95,8 @@
 
                   </button>
 
-                  <a class="navbar-brand" href="{% url 'index' %}"><img class="navbar-img" src="{% static 'assets/images/logo4.png' %}" alt=""></a>
+                  <a id="navbar-logo" class="navbar-brand" href="{% url 'index' %}">
+                    <img class="navbar-img" src="{% static 'assets/images/logo4.png' %}" alt=""></a>
 
                 </div>
 
@@ -180,7 +181,7 @@
                 	                <li class="footer-li"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>
                                     <span><a href="tel:+918848750988">8848750988,&ensp;&ensp;</a><a href="tel:+918921799665">8921799665</span></a></li>
                 	                <li class="footer-li"><a href="mailto:thetravancorecharitabletrust@gmail.com"><span class="icon footer-icon">
-                                    <i class="fa fa-paper-plane pr-4"></i></span> thetravancorecharitabletrust@gmail.com</span></a></li>
+                                    <i class="fa fa-envelope pr-4"></i></span> Mail us here!</span></a></li>
                 	              </ul>
                               </div>
 
