--- a/trust/templates/contact.html
+++ b/trust/templates/contact.html
@@ -68,9 +68,9 @@
 
 				<div class="col-md-4 col-md-offset-1 col-contact">
 
-					<h2 class="title-style-2"> Travancore CONTACTS <span class="title-under"></span></h2>
+					<h2 class="title-style-2">CONTACTS <span class="title-under"></span></h2>
 					<p>
-						<b>Travancore</b> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla .
+						<b>The Travancore</b> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla .
 					</p>
 
 					<div class="contact-items">
