--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -100,7 +100,7 @@
                   <div class="about-us-col">
 
                         <div class="col-icon-wrapper ">
-                          <img src="{% static 'assets/images/icons/our-mission-icon.png' %}" alt="">
+                          <img src="{% static 'assets/images/icons/our-mission-icon1.png' %}" alt="">
                         </div>
                         <h3 class="col-title">our mission</h3>
                         <div class="col-details">
@@ -120,9 +120,9 @@
                   <div class="about-us-col">
 
                         <div class="col-icon-wrapper">
-                          <img src="{% static 'assets/images/icons/make-donation-icon.png' %}" alt="">
+                          <img src="{% static 'assets/images/icons/make-donation-icon1.png' %}" alt="">
                         </div>
-                        <h3 class="col-title">Make donations</h3>
+                        <h3 class="col-title">Donations</h3>
                         <div class="col-details">
 
                           <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
@@ -140,7 +140,7 @@
                   <div class="about-us-col">
 
                         <div class="col-icon-wrapper">
-                          <img src="{% static 'assets/images/icons/help-icon.png' %}" alt="">
+                          <img src="{% static 'assets/images/icons/help-icon1.png' %}" alt="">
                         </div>
                         <h3 class="col-title">Help & support</h3>
                         <div class="col-details">
@@ -160,7 +160,7 @@
                   <div class="about-us-col">
 
                         <div class="col-icon-wrapper">
-                          <img src="{% static 'assets/images/icons/programs-icon.png' %}" alt="">
+                          <img src="{% static 'assets/images/icons/programs-icon1.png' %}" alt="">
                         </div>
                         <h3 class="col-title">our programs</h3>
                         <div class="col-details">
